--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.13",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.6"
   }
 }
