--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
+    "log4js": "^3.0.6",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.13",
     "multer": "^1.4.1",
