--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.13",
     "multer": "^1.4.1",
+    "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6"
   }
 }
