--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "log4js": "^3.0.6",
@@ -23,6 +24,9 @@
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nodemailer": "^4.7.0",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "otplib": "^10.0.1",
+    "springedge": "^1.0.5",
+    "twilio": "^3.26.0"
   }
 }
