--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^4.7.0",
     "nodemon": "^1.18.6",
     "otplib": "^10.0.1",
+    "sendotp": "^1.2.9",
     "springedge": "^1.0.5",
     "twilio": "^3.26.0"
   }
