--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
+    "moment-timezone": "^0.5.33",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.13",
     "multer": "^1.4.1",
